--- a/src/app/views/details/details.component.html
+++ b/src/app/views/details/details.component.html
@@ -8,7 +8,7 @@
     <!-- Recipe Title -->
     <h1 class="text-5xl font-extrabold text-secondary text-center mb-6 leading-tight">{{ data.name }}</h1>
 
-    <!-- Metadata Section -->
+    <!-- Metadata Section -------->
     <div class= "bg-white p-6 rounded-lg shadow-md mb-10">
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 text-secondary text-lg">
         <div class="flex items-center gap-3">
