ajustes en diseño

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <nav
-  class="bg-white px-6 py-4 md:flex md:justify-between md:items-center fixed w-full top-0 z-50 shadow-sm"
+  class="bg-primary px-6 py-4 md:flex md:justify-between md:items-center fixed w-full top-0 z-50 shadow-sm"
 >
   <section class="flex justify-between items-center md:mb-0">
     <img
@@ -7,6 +7,7 @@
       alt="Sazón del Bueno"
       class="w-28 md:w-36 cursor-pointer"
       routerLink="/home"
+      style="filter: invert(100%);"
     />
 
     <button class="md:hidden" (click)="menuControl()">
@@ -16,7 +17,7 @@
         viewBox="0 0 24 24"
         stroke-width="1.5"
         stroke="currentColor"
-        class="w-7 h-7 text-secondary"
+        class="w-7 h-7 text-white"
       >
         <path
           stroke-linecap="round"
@@ -30,49 +31,49 @@
   <div [ngClass]="claseActual" class="md:block ocultar">
     @if (registered) {
     <section
-      class="flex flex-col w-full gap-2 capitalize md:flex-row md:items-center md:justify-center text-secondary md:w-auto mt-4 md:mt-0"
+      class="flex flex-col w-full gap-2 capitalize md:flex-row md:items-center md:justify-center text-white md:w-auto mt-4 md:mt-0"
     >
       <a
         routerLink="/recipes"
-        routerLinkActive="font-bold border-b-2 border-primary"
+        routerLinkActive="font-bold border-b-2 border-amarillo-sazon"
         [routerLinkActiveOptions]="{ exact: true }"
-        class="px-4 py-2 md:bg-transparent md:hover:text-primary transition-colors pb-1"
+        class="px-4 py-2 md:bg-transparent hover:text-amarillo-sazon transition-colors pb-1"
       >
         Recetas
       </a>
 
       <a
         routerLink="/myrecipes"
-        routerLinkActive="font-bold border-b-2 border-primary"
-        class="px-4 py-2 md:bg-transparent md:hover:text-primary transition-colors pb-1"
+        routerLinkActive="font-bold border-b-2 border-amarillo-sazon"
+        class="px-4 py-2 md:bg-transparent hover:text-amarillo-sazon transition-colors pb-1"
       >
         Mis Recetas
       </a>
       <a
         routerLink="/favorites"
-        routerLinkActive="font-bold border-b-2 border-primary"
-        class="px-4 py-2 md:bg-transparent md:hover:text-primary transition-colors pb-1"
+        routerLinkActive="font-bold border-b-2 border-amarillo-sazon"
+        class="px-4 py-2 md:bg-transparent hover:text-amarillo-sazon transition-colors pb-1"
       >
         Mis Favoritas
       </a>
       <a
         routerLink="/newRecipe"
-        routerLinkActive="font-bold border-b-2 border-primary"
-        class="px-4 py-2 md:bg-transparent md:hover:text-primary transition-colors pb-1"
+        routerLinkActive="font-bold border-b-2 border-amarillo-sazon"
+        class="px-4 py-2 md:bg-transparent hover:text-amarillo-sazon transition-colors pb-1"
       >
         Nueva Receta
       </a>
 
       @if (registered) {
       <a
-        class="px-4 py-2 md:bg-transparent md:hover:text-primary transition-colors border-t cursor-pointer md:hidden"
+        class="px-4 py-2 md:bg-transparent hover:text-amarillo-sazon transition-colors border-t cursor-pointer md:hidden"
         (click)="logout()"
       >
         Cerrar sesión
       </a>
       }
     </section>
-    }
+    } 
   </div>
 
   @if (!registered) {
@@ -82,13 +83,13 @@
     >
       <a
         routerLink="/auth/login"
-        class="bg-tertiary text-secondary px-5 py-2 rounded-lg hover:bg-tertiary/80 transition-colors font-medium"
+        class="bg-white text-primary px-5 py-2 rounded-lg hover:bg-gray-100 transition-colors font-medium"
       >
         Iniciar Sesión
       </a>
       <a
         routerLink="/auth/register"
-        class="bg-primary text-white px-5 py-2 rounded-lg hover:bg-primary/90 transition-colors font-medium"
+        class="bg-white text-primary px-5 py-2 rounded-lg hover:bg-gray-100 transition-colors font-medium"
       >
         Registrarse
       </a>
@@ -96,7 +97,7 @@
   </div>
   } @else {
   <div class="flex gap-2 items-center">
-    <span class="text-secondary capitalize hidden md:block">{{ name }}</span>
+    <span class="text-white capitalize hidden md:block">{{ name }}</span>
     <app-profile *ngIf="registered" class="hidden md:block"></app-profile>
   </div>
   }
