--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -2,7 +2,7 @@
   <div class="flex justify-end">
     <div class="flex items-center gap-3">
       <button
-        class="rounded-full w-8 h-8 cursor-pointer text-secondary hover:text-primary transition-colors flex items-center justify-center"
+        class="rounded-full w-8 h-8 cursor-pointer text-white hover:text-amarillo-sazon transition-colors flex items-center justify-center"
         (click)="handleAccordion()"
       >
         <ng-icon name="heroUser" size="20px"></ng-icon>
