--- a/src/app/components/edit-profile/edit-profile.component.html
+++ b/src/app/components/edit-profile/edit-profile.component.html
@@ -1,56 +1,54 @@
-<div class="flex items-center justify-center mt-[140px]">
-  <form
-    class="mx-1 my-10 w-full text-sm rounded-md bg-white lg:w-2/3 lg:flex"
-    [formGroup]="user"
-    (ngSubmit)="updateAccount()"
-  >
-    <div
-      class="bg-negro-sazon rounded-t-lg py-5 lg:flex flex-col items-center justify-center px-4 lg:w-2/5 lg:rounded-l-lg"
-    >
-      <div
-        class="border border-black bg-amarillo-sazon mx-auto w-40 h-40 flex justify-center items-center rounded-full"
-      >
-        <img src="assets/img/chef.png" alt="" class="h-32 cursor-pointer" />
+<div class="py-16 bg-gray-100">
+  <div class="max-w-4xl w-full mx-auto bg-white shadow-lg rounded-lg overflow-hidden md:flex">
+    <!-- Columna de la imagen -->
+    <div class="w-full md:w-1/3 bg-negro-sazon p-8 flex flex-col items-center justify-center">
+      <div class="w-32 h-32 rounded-full bg-amarillo-sazon flex items-center justify-center mb-4">
+        <img src="assets/img/chef.png" alt="Foto de perfil" class="h-24 w-24 object-cover rounded-full" />
       </div>
-      <h1 class="flex justify-center mt-3 text-lg text-amarillo-sazon">
-        {{ email }}
-      </h1>
+      <h2 class="text-white text-xl font-semibold">{{ email }}</h2>
     </div>
 
-    <div
-      class="bg-gray-200 flex flex-col gap-5 py-5 px-10 lg:w-full lg:px-32 lg:py-20"
-    >
-      <div class="labels_inputs">
-        <label for="">Nombre del usuario</label>
-        <input
-          type="text"
-          class="inputs"
-          formControlName="name"
-          Name="name"
-          id="name"
-          name="name"
-        />
-      </div>
-
-      <div class="labels_inputs">
-        <label for="">Nueva Contraseña</label>
-        <input
-          type="text"
-          class="inputs"
-          formControlName="password"
-          id="password"
-        />
-      </div>
-
-      <div class="flex justify-center my-5">
-        <button
-          class="p-2 w-full rounded-md bg-negro-sazon text-amarillo-sazon hover:opacity-90"
-          type="submit"
-          [disabled]="!user.valid"
-        >
-          Actualizar
-        </button>
-      </div>
+    <!-- Columna del formulario -->
+    <div class="w-full md:w-2/3 p-8">
+      <h2 class="text-2xl font-bold text-secondary mb-6">Editar Perfil</h2>
+      <form [formGroup]="user" (ngSubmit)="updateAccount()">
+        <div class="mb-6 relative">
+          <label for="name" class="block text-secondary text-sm font-medium mb-2">Nombre de usuario</label>
+          <div class="relative">
+            <input
+              type="text"
+              id="name"
+              formControlName="name"
+              class="w-full pl-10 pr-4 py-2 border border-gray-300 rounded-lg focus:ring-primary focus:border-primary"
+            />
+            <ng-icon name="heroUser" size="18px" class="absolute left-3 top-1/2 transform -translate-y-1/2 text-gray-500"></ng-icon>
+          </div>
+        </div>
+        <div class="mb-6 relative">
+          <label for="password" class="block text-secondary text-sm font-medium mb-2">Nueva Contraseña</label>
+          <div class="relative">
+            <input
+              [type]="viewPassword ? 'text' : 'password'"
+              id="password"
+              formControlName="password"
+              class="w-full pl-10 pr-4 py-2 border border-gray-300 rounded-lg focus:ring-primary focus:border-primary"
+            />
+            <ng-icon name="heroLockClosed" size="18px" class="absolute left-3 top-1/2 transform -translate-y-1/2 text-gray-500"></ng-icon>
+            <button type="button" (click)="togglePasswordVisibility()" class="absolute inset-y-0 right-0 flex items-center pr-3">
+              <ng-icon [name]="viewPassword ? 'heroEyeSlash' : 'heroEye'" size="18px" class="text-gray-500"></ng-icon>
+            </button>
+          </div>
+        </div>
+        <div class="flex justify-end">
+          <button
+            type="submit"
+            [disabled]="!user.valid"
+            class="px-6 py-2 bg-primary text-white font-semibold rounded-lg hover:bg-opacity-90 focus:outline-none focus:ring-2 focus:ring-primary focus:ring-opacity-50"
+          >
+            Actualizar
+          </button>
+        </div>
+      </form>
     </div>
-  </form>
+  </div>
 </div>
