--- a/src/app/components/recipe-register/recipe-register.component.html
+++ b/src/app/components/recipe-register/recipe-register.component.html
@@ -69,7 +69,7 @@
       <div class="flex justify-center mt-8">
         <button
           type="submit"
-          class="w-full md:w-auto text-secondary bg-primary hover:bg-opacity-90 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-10 py-3 text-center uppercase"
+          class="w-full md:w-auto text-white bg-primary hover:bg-opacity-90 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-10 py-3 text-center uppercase"
           [disabled]="!recipe.valid"
         >
           Guardar Receta
