--- a/src/app/views/account/account.component.html
+++ b/src/app/views/account/account.component.html
@@ -1,9 +1,9 @@
 <div class="relative overflow-x-auto sm:rounded-lg">
   <div class="h-[700px] overflow-y-auto">
     <table
-      class="w-full text-sm text-center text-gray-500 bg-gray-100 rounded-md"
+      class="w-full text-sm text-center text-gray-500 bg-white rounded-md"
     >
-      <thead class="text-xs text-white uppercase bg-black">
+      <thead class="text-xs text-white uppercase bg-primary">
         <tr>
           <th scope="col" class="px-6 py-3">Id</th>
           <th scope="col" class="px-6 py-3">Nombre</th>
