--- a/src/app/views/difficulty-admin/difficulty-admin.component.html
+++ b/src/app/views/difficulty-admin/difficulty-admin.component.html
@@ -9,7 +9,7 @@
       [(ngModel)]="newDifficulty"
     />
     <button
-      class="flex p-2 bg-negro-sazon text-white rounded hover:opacity-90 items-center"
+      class="flex p-2 bg-primary text-white rounded hover:opacity-90 items-center"
       (click)="addDifficulty()"
     >
       <ng-icon name="heroPlus" size="20"></ng-icon>
@@ -17,8 +17,8 @@
     </button>
   </div>
   <table class="w-full text-sm text-center text-gray-500 bg-white rounded-md">
-    <thead class="text-xs text-gray-700 uppercase">
-      <tr class="bg-black text-gray-100">
+    <thead class="text-xs text-white uppercase">
+      <tr class="bg-primary text-white">
         <th scope="col" class="px-6 py-3">Id</th>
         <th scope="col" class="px-6 py-3">Nombre</th>
         <th scope="col" class="px-6 py-3">Fecha</th>
