--- a/src/app/views/recipes-admin/recipes-admin.component.html
+++ b/src/app/views/recipes-admin/recipes-admin.component.html
@@ -1,8 +1,8 @@
 <div class="sm:rounded-lg">
   <div class="h-[700px] overflow-y-auto">
     <table class="w-full text-sm text-center text-gray-500 bg-white rounded-md">
-      <thead class="text-xs text-gray-700 uppercase">
-        <tr class="bg-black text-gray-100">
+      <thead class="text-xs text-white uppercase">
+        <tr class="bg-primary text-white">
           <th scope="col" class="px-6 py-3">Id</th>
           <th scope="col" class="px-6 py-3">Autor</th>
           <th scope="col" class="px-6 py-3">Receta</th>
